# RIP

./: .gitignore  CMakeLists.txt  HOS_LICENSE.txt  README.md
Include/RIP/: C3D.h  Cache.h  Convert.h  Defs.h  Format.h  Pixels.h  Swap.h  Tex3DS.h  Texture.h  Tiling.h
Source/: Allocator.h  C3D.c  Cache.c  Convert.c  Format.c  Pixels.c  PixelsImpl.s  Swap.c  SwapImpl.s  Tex3DS.c  Texture.c  Tiling.c
Source/Decompress/: Decompress.c  Decompress.h  Include.h
Tests/: CMakeLists.txt
Tests/C3D/: CMakeLists.txt
Tests/C3D/TexturedCube/: CMakeLists.txt
Tests/C3D/TexturedCube/Source/: Main.c  VShader.v.pica  stb_image.c
Tests/HOS/: CMakeLists.txt
Tests/HOS/BenchmarkPixelConvert/: CMakeLists.txt  Main.c
Tests/HOS/BenchmarkPixelSwap/: CMakeLists.txt  Main.c
Tests/HOS/SwapBenchmark/: CMakeLists.txt  Main.c
Tests/HOS/VerifyPixelConvert/: CMakeLists.txt  Main.c
Tests/HOS/VerifyPixelSwap/: CMakeLists.txt  Main.c
Tests/HOS/VerifySwap/: CMakeLists.txt  Main.c
